# github-mcp-server

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
src/github_prod_mcp/: __init__.py  config.py  github_api.py  main.py  models.py  rest_api.py  service.py
